# projectdavid-orm

./: .bandit.yml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/workflows/: test_tag_release.yml
scripts/: update_pyproject_version.py  update_version.py
src/: pyproject.toml
src/projectdavid_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/projectdavid_orm/: __init__.py  ormInterface.py
src/projectdavid_orm/constants/: __init__.py
src/projectdavid_orm/projectdavid_orm/: models.py
tests/e2e/: test_projectdavid_flow.py
