[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectdavid-orm"
version = "1.1.10"
description = "Shared SQLAlchemy ORM models for ProjectDavid services"
readme = "README.md"
authors = [
  { name = "Francis N.", email = "engineering@projectdavid.co.uk" }
]
license = { text = "PolyForm Noncommercial License 1.0.0" }
keywords = ["orm", "sqlalchemy", "models", "projectdavid", "internal"]
requires-python = ">=3.10"

dependencies = [
  "sqlalchemy>=2.0",
  "pymysql",
  "pydantic>=2.0",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "bandit",
  "mypy",
]

[project.urls]
Homepage = "https://github.com/project-david-ai/projectdavid-orm"
Documentation = "https://docs.projectdavid.co.uk/docs"
Changelog = "https://github.com/project-david-ai/projectdavid-orm/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["projectdavid_orm", "projectdavid_orm.*"]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true

[tool.flake8]
max-line-length = 200
extend-ignore = ["E203"]
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.isort]
profile = "black"