[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectdavid-orm"
version = "1.5.0"
description = "Shared SQLAlchemy ORM models for ProjectDavid services"
readme = "README.md"
authors = [
  { name = "Francis N.", email = "engineering@projectdavid.co.uk" }
]
license = { text = "PolyForm Noncommercial License 1.0.0" }
keywords = ["orm", "sqlalchemy", "models", "projectdavid", "internal"]
requires-python = ">=3.10"

dependencies = [
  "sqlalchemy>=2.0",
  "pymysql",
  "pydantic>=2.0",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black==24.1.1",
  "isort==5.13.2",
  "bandit==1.7.7",
  "mypy>=1.0",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/project-david-ai/projectdavid-orm"
Documentation = "https://docs.projectdavid.co.uk/docs"
Changelog = "https://github.com/project-david-ai/projectdavid-orm/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["projectdavid_orm", "projectdavid_orm.*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]
